gcc/testsuite/rust/rustc/ui/typeof/issue-100183.rs
struct Struct {
    y: (typeof("hey"),),
// { dg-error ".E0516." "" { target *-*-* } .-1 }
}

fn main() {}

